primer componente usando cdn de vue.

--- a/index.html
+++ b/index.html
@@ -5,23 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curso de vue.js</title>
 </head>
 
 <body>
     <div id="app">
-        <h1>hola mundo</h1>
-        <p>{{ title }}</p>
+        <hello-world></hello-world>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="./components/HelloWorld.js"></script>
     <script>
-        new Vue({
+        let vm = new Vue({
             el: "#app",
-            data() {
-                return {
-                    title: "mi primer app en vue.js"
-                }
-            }
         })
     </script>
 </body>
