--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <div id="app">
         <hello-world></hello-world>
+        <vue-directives></vue-directives>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="./components/HelloWorld.js"></script>
+    <script src="./components/VueDirectives.js"></script>
     <script>
         let vm = new Vue({
             el: "#app",
