--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./components/DirectiveShow.js"></script>
     <script src="./components/DirectiveIf.js"></script>
     <script src="./components/DirectiveFor.js"></script>
+    <script src="./components/DirectiveOn.js"></script>
     <script src="./components/VueDirectives.js"></script>
     <script>
         let vm = new Vue({
